gcc/testsuite/rust/rustc/ui/error-codes/E0437.rs
trait Foo {}

impl Foo for i32 {
    type Bar = bool; // { dg-error ".E0437." "" { target *-*-* } }
}

fn main () {
}

